--- a/REST_magic1311/Views/Store/Index.cshtml
+++ b/REST_magic1311/Views/Store/Index.cshtml
@@ -4,5 +4,53 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<center>
+    <h1>The Magic1311 STORE</h1>
 
+
+    <p>
+        <b>You can buy our apps in the <a href="https://play.google.com/store/apps/developer?id=GFA1311&hl=es_419">Google Play Store</a> or here and have really nice deals!</b>
+    </p>
+
+    <p>
+        <h2>Limited Promo!</h2>
+        <b>
+            If you buy <i>2 apps</i> you'll receive the other product of the trilogy <i>(ESP, PET, TRAVEL)</i> for free! If you bought the apps from the play store you too have the promo and have to
+            reclaim it on the @Html.ActionLink("support with a RECLAIM FREE CODE", "Index", "Support")
+        </b>
+    </p>
+
+    <p>
+        <h2>Our products</h2>
+
+        <br />
+        <div class="col-lg-4">
+            <div class="tilt">
+                <a href="#">
+                    <img src="~/Content/Images/Logos/esp_logo_store.jpg" />
+                </a>
+            </div>
+            <h3>Magic Trick ESP</h3>
+                Buy this product
+        </div>
+        <div class="col-lg-4">
+            <div class="tilt">
+                <a href="#">
+                    <img src="~/Content/Images/Logos/pet_logo_store.jpg" />
+                </a>
+            </div>
+            <h3>Magic Trick PET</h3>
+            Buy this product
+        </div>
+        <div class="col-lg-4">
+            <div class="tilt">
+                <a href="#">
+                    <img src="~/Content/Images/Logos/travel_logo_store.jpg"/>
+                </a>
+            </div>
+            <h3>Magic Trick TRAVEL</h3>
+            Buy this product
+        </div>
+        
+    </p>
+</center>
