--- a/REST_magic1311/Views/Android/Index.cshtml
+++ b/REST_magic1311/Views/Android/Index.cshtml
@@ -9,10 +9,11 @@
         <div class="col-lg-4">
             <div class="tilt">
                 <a href="#">
-                    <img src="~/Content/Images/Logos/Google-Play-Icon-2.png" /></a>
+                    <img src="~/Content/Images/Logos/Google-Play-Icon-2.png" />
+                </a>
             </div>
         </div>
-        
+
         <h2>Google Play Store Section</h2>
         <p>
             If you bought an app from the Google Play store you have to @Html.ActionLink("Register", "Registration", "User") to use your mail on the app that you purchased!
@@ -20,9 +21,34 @@
             Once in the app you will have to put your registered email and then you will have access to the PDF Manuals of the software.
         </p>
         <p>
-            If you want to know more about or software in google play you can visit our <a href="https://play.google.com/store/apps/developer?id=GFA1311&hl=es_419">google play store
-            applications</a> or visit the @Html.ActionLink("store in the site", "Index", "Store") to buy an app from here using Paypal.
+            If you want to know more about or software in google play you can visit our <a href="https://play.google.com/store/apps/developer?id=GFA1311&hl=es_419">
+                google play store
+                applications
+            </a> or visit the @Html.ActionLink("store in the site", "Index", "Store") to buy an app from here using Paypal.
         </p>
     </center>
 </div>
+
+    <div id="promo">
+        <center>
+            <p>
+                <h2>Limited Promo! <b>3x2!!!</b></h2>
+                <b>
+                    <img src="~/Content/Images/Logos/Products.png" />
+                    Buy 3 apps for the price of 2
+                    Get them now for only <i>$13,98</i>
+                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="2U2STSRTJW3FN">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+
+
+                    If you buy <i>2 apps</i> you'll receive the other product of the trilogy <i>(ESP, PET, TRAVEL)</i> for free, you'll be receiving a code in your registered email
+                    with the product code to activate it on the Google Play Store after you activate both products IN THE APP on your cell.
+                </b>
+            </p>
+        </center>
+    </div>
 
