--- a/REST_magic1311/Views/Store/Index.cshtml
+++ b/REST_magic1311/Views/Store/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Store - MAGIC1311";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,46 +11,77 @@
     <p>
         <b>You can buy our apps in the <a href="https://play.google.com/store/apps/developer?id=GFA1311&hl=es_419">Google Play Store</a> or here and have really nice deals!</b>
     </p>
+    <div id="promo">
+        <p>
+            <h2>Limited Promo! <b>3x2!!!</b></h2>
+            <b>
+                <img src="~/Content/Images/Logos/Products.png" />
+                Buy 3 apps for the price of 2
+                Get them now for only <i>$13,98</i>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="2U2STSRTJW3FN">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                </form>
 
-    <p>
-        <h2>Limited Promo!</h2>
-        <b>
-            If you buy <i>2 apps</i> you'll receive the other product of the trilogy <i>(ESP, PET, TRAVEL)</i> for free! If you bought the apps from the play store you too have the promo and have to
-            reclaim it on the @Html.ActionLink("support with a RECLAIM FREE CODE", "Index", "Support")
-        </b>
-    </p>
 
-    <p>
-        <h2>Our products</h2>
+                If you buy <i>2 apps</i> you'll receive the other product of the trilogy <i>(ESP, PET, TRAVEL)</i> for free, you'll be receiving a code in your registered email
+                with the product code to activate it on the Google Play Store after you activate both products IN THE APP on your cell.
+            </b>
+        </p>
+        </div>
+        <p>
+            <h2>Our products</h2>
 
-        <br />
-        <div class="col-lg-4">
-            <div class="tilt">
-                <a href="#">
-                    <img src="~/Content/Images/Logos/esp_logo_store.jpg" />
-                </a>
+            <br />
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <a href="#">
+                        <img src="~/Content/Images/Logos/esp_logo_store.jpg" />
+                    </a>
+                </div>
+                <h3>Magic Trick ESP</h3>
+                Buy this product for <b>$6,99</b>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="NSJQPCTXG26HL">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                </form>
             </div>
-            <h3>Magic Trick ESP</h3>
-                Buy this product
-        </div>
-        <div class="col-lg-4">
-            <div class="tilt">
-                <a href="#">
-                    <img src="~/Content/Images/Logos/pet_logo_store.jpg" />
-                </a>
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <a href="#">
+                        <img src="~/Content/Images/Logos/pet_logo_store.jpg" />
+                    </a>
+                </div>
+                <h3>Magic Trick PET</h3>
+                Buy this product for <b>$6,99</b>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="DUHXT924D2FQW">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                </form>
+
             </div>
-            <h3>Magic Trick PET</h3>
-            Buy this product
-        </div>
-        <div class="col-lg-4">
-            <div class="tilt">
-                <a href="#">
-                    <img src="~/Content/Images/Logos/travel_logo_store.jpg"/>
-                </a>
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <a href="#">
+                        <img src="~/Content/Images/Logos/travel_logo_store.jpg" />
+                    </a>
+                </div>
+                <h3>Magic Trick TRAVEL</h3>
+                Buy this product for <b>$6,99</b>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="HACGMGHWDUTEE">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                </form>
+
             </div>
-            <h3>Magic Trick TRAVEL</h3>
-            Buy this product
-        </div>
-        
-    </p>
+
+        </p>
 </center>
