Added privacy policy to the site and linked in the layout view

--- a/REST_magic1311/Views/Shared/_Layout.cshtml
+++ b/REST_magic1311/Views/Shared/_Layout.cshtml
@@ -95,6 +95,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Magic1311 games and magic</p>
+            <p>@Html.ActionLink("MAGIC1311's Privacy Policy", "Index", "Privacy")</p>
         </footer>
     </div>
 
