Just changed the "Buy Apps" for "Store" in the layout view

--- a/REST_magic1311/Views/Shared/_Layout.cshtml
+++ b/REST_magic1311/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     @Html.ActionLink("Support", "Index", "Support", new { area = "" }, new { @class = "navbar-brand" })
                 </li>
                 <li>
-                    @Html.ActionLink("Buy Apps", "Index", "Store", new { area = "" }, new { @class = "navbar-brand" })
+                    @Html.ActionLink("Store", "Index", "Store", new { area = "" }, new { @class = "navbar-brand" })
                 </li>
             </ul>
 
