added new softwares to the store page

--- a/REST_magic1311/Views/Store/Index.cshtml
+++ b/REST_magic1311/Views/Store/Index.cshtml
@@ -83,5 +83,49 @@
 
             </div>
 
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <a href="#">
+                        <img src="~/Content/Images/store_revealed.jpg" />
+                    </a>
+                </div>
+                <h3>Magic Trick Revealed Pro</h3>
+                Buy this product for <b>$3,99</b>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="WXNXD4TR7XJQJ">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                </form>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <a href="#">
+                        <img src="~/Content/Images/store_telepatic.jpg" />
+                    </a>
+                </div>
+                <h3>Magic Trick TelepatiCard</h3>
+                Buy this product for <b>$6,99</b>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="WXNXD4TR7XJQJ">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/es_XC/i/scr/pixel.gif" width="1" height="1">
+                </form>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <a href="#">
+                        <img src="~/Content/Images/store_petDEMO.jpg" />
+                    </a>
+                </div>
+
+                <h3>Magic Trick PET - DEMO</h3>
+                Buy this product for <b>FREE</b>
+                <p><b><a href="https://play.google.com/store/apps/details?id=com.gfa1311.TelepatiCard">CLICK HERE to download your free demo</a></b></p>
+            </div>
+
         </p>
 </center>
